k8s/overlays/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  tls:
    - hosts:
        - staging.qosmo.co.kr
      secretName: staging-tls
  rules:
    - host: staging.qosmo.co.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: staging-nginx
                port:
                  number: 80
